docs:fix maarkdown spacing

--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,12 @@ body {
   border-radius: 10px;
   margin-right: 10px;
 }
+
+@media screen and (min-width: 768px){
+body{
+ .column{
+   width: 220px;
+   float: left: 
+ }
+};  
+}
